package cmh.application;

public interface DamageDealer {
    void dealDamage(Thing target);
}
