package cmh.application;

public class Device extends Thing{
    public Device(String n) {
        super(n);
    }

    public Device(String n, String obf){
        super(n, obf);
    }
}
